Koniec głównych prac

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             justify-content: center;
         }
 
-        .container .menu button.reset{
+        .container .menu button{
             font-size: 2em;
             margin: 5px 0;
         }
@@ -84,6 +84,8 @@
         <canvas></canvas>
         <div class="menu">
             <button class="reset">Reset Game!</button>
+            <button class="addBall">Add Ball to Game</button>
+            <button class="removeBall">Remove Ball from Game</button>
         </div>
     </div>
 
